# GuitarMo

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dashboard.bat  LICENSE  MC-Dashboard.bat  PROJECT.md  README.md  Sync.bat  app.py  conftest.py  project_plan.py  pyproject.toml  requirements-ml.txt  requirements.txt
.mc/: INBOX.md  project.json
dashboard/: README.md  build_dashboard.py
docs/: ARCHITECTURE.md  DATASETS.md  ENGINES.md  PROGRESS.md  RESEARCH.md  ROADMAP.md  VISION_AND_QUALITY.md  generate_task_cards.py
docs/phases/: PHASE_0_foundation.md  PHASE_1_mvp.md  PHASE_2_pitch_accuracy.md  PHASE_3_harmonization_ml.md  PHASE_4_arrangement.md  PHASE_5_app_deploy.md  PHASE_6_release.md
docs/tasks/: INDEX.md  T0_1_repo_scaffold_environment.md  T0_2_core_data_model.md  T0_3_music_theory_utilities.md  T1_1_pitch_tracking_transcription.md  T1_2_key_detection.md  T1_3_rule_based_harmonizer_3_tiers.md  T1_4_style_engine.md  T1_5_guitar_arranger.md  T1_6_synthesis.md  T1_7_notation_export.md  T1_8_interfaces_cli_web.md  T1_9_tests_demo.md  T2_1_pluggable_pitch_backends_crepe.md  T2_2_basic_pitch_backend.md  (+23 more)
examples/: make_example.py
guitarmo/: __init__.py  arrange.py  audio_io.py  cli.py  core.py  harmony.py  key.py  notation.py  pipeline.py  pitch.py  pitch_backends.py  render.py  styles.py  theory.py  transcribe.py
tests/: conftest.py  test_pipeline.py  test_pitch_backends.py  test_units.py
tools/: install_schedule.ps1  sync.py  update_obsidian.py
training/: README.md  download_data.py  evaluate.py  model.py  preprocess.py  train.py
(+10 files in other folders)
